--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      - name: hello world js action
-        id: hello
+      - id: hello
         uses: v-stache/hello-world-javascript-action@master
         with:
           who-to-greet: "xingyu"
