--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,7 @@
 name: 'Hello World' # Required The name of your action. GitHub displays the name in the Actions tab to help visually identify actions in each job.
-description: 'Greet someone and record the time'
-inputs:
+description: 'Greet someone and record the time' # Required A short description of the action.
+author: starain # Optional The name of the action's author.
+inputs: # Optional Input parameters allow you to specify data that the action expects to use during runtime. GitHub stores input parameters as environment variables. Input ids with uppercase letters are converted to lowercase during runtime. We recommended using lowercase input ids.
   who-to-greet:  # id of input
     description: 'Who to greet'
     required: true
@@ -10,4 +11,7 @@ outputs:
     description: 'The time we greeted you'
 runs:
   using: 'node12'
+  env: 
+    envTest1: 'test1'
+    envTest2: 'test2'
   main: 'index.js'
