--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ outputs:
 runs:
   using: 'node12'
   pre: 'pre.js' # https://github.com/v-stache/hello-world-javascript-action/runs/655941181?check_suite_focus=true
-  pre-if: 'runner.os==linux'
+  pre-if: 'runner.os == ubuntu'
   main: 'index.js'
   post: 'post.js'
   #env:
