--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,6 @@ runs:
   # pre-if: 'runner.os == "linux"' 
   main: 'index.js'
   post: 'post.js'
-  post-if: 'runner.os == linux' # ggg
+  #post-if: 'runner.os == linux' # ggg
   #env:
     #name: 'octocat'
