--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   hello_world_job:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+    #runs-on: ubuntu-latest
     name: A job to say hello
     steps:
       - id: hello
