--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@actions/core": "^1.2.4",
     "@actions/exec": "^1.0.4",
-    "@actions/github": "^2.1.1"
+    "@actions/github": "^2.1.1",
+    "@actions/glob": "^0.1.0"
   }
 }
