--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@actions/core": "^1.2.4",
     "@actions/exec": "^1.0.4",
     "@actions/github": "^2.1.1",
-    "@actions/glob": "^0.1.0"
+    "@actions/glob": "^0.1.0",
+    "@actions/io": "^1.0.2"
   }
 }
