--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@actions/exec": "^1.0.4",
     "@actions/github": "^2.1.1",
     "@actions/glob": "^0.1.0",
-    "@actions/io": "^1.0.2"
+    "@actions/io": "^1.0.2",
+    "@actions/tool-cache": "^1.3.4"
   }
 }
