--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,10 @@ inputs: # Optional Input parameters allow you to specify data that the action ex
     description: 'Who to greet'
     required: true
     default: 'World'
+  myToken:
+    description: 'token'
+    required: false
+    default: ${{ secrets.GITHUB_TOKEN }}
 outputs:
   time: # id of output
     description: 'The time we greeted you'
