--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         uses: v-stache/hello-world-javascript-action@master
         with:
           who-to-greet: "xingyu"
+          myToken: ${{ secrets.GITHUB_TOKEN }}
       - name: get output
         run: echo "The time was ${{steps.hello.outputs.time}}"
       - name: get export variable
